--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   device_info: ^0.4.0+2
   shared_preferences: ^0.5.3+1
   uuid: 2.0.1
+  url_launcher: ^5.0.3
 
 dev_dependencies:
   flutter_test:
