--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_easyrefresh: ^1.2.7
   dio: 2.0.1
   device_info: ^0.4.0+2
   shared_preferences: ^0.5.3+1
   uuid: 2.0.1
   url_launcher: ^5.0.3
+  path_provider: ^1.1.0
+  permission_handler: ^3.0.0
+  flutter_downloader: ^1.1.7
+  install_plugin: ^2.0.1
 
 dev_dependencies:
   flutter_test:
