--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   permission_handler: ^3.0.0
   flutter_downloader: ^1.1.7
   install_plugin: ^2.0.1
+  flare_flutter: ^1.2.0
 
 dev_dependencies:
   flutter_test:
@@ -49,12 +50,13 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
+  assets:
+    - assets/flare/SpaceAnim.flr
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
