--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_downloader: ^1.1.7
   install_plugin: ^2.0.1
   flare_flutter: ^1.2.0
+  progress_dialog: ^1.1.0+1
 
 dev_dependencies:
   flutter_test:
