--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,11 +46,20 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
+    signingConfigs {
+        config {
+            keyAlias 'jenkins_tool'
+            keyPassword 'qwe123321'
+            storeFile file('jenkins_tool.jks')
+            storePassword 'qwe123321'
+        }
+    }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.config
         }
     }
 }
