--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   permission_handler: ^3.0.0
   install_plugin: ^2.0.1
   flare_flutter: ^1.2.0
-  progress_dialog: ^1.1.0+1
+  websocket: ^0.0.5
 
 dev_dependencies:
   flutter_test:
