--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   install_plugin: ^2.0.1
   flare_flutter: ^1.2.0
   websocket: ^0.0.5
+  package_info: ^0.4.0+6
 
 dev_dependencies:
   flutter_test:
